fix modal vertical position on mobile

--- a/src/scss/_common/_components.scss
+++ b/src/scss/_common/_components.scss
@@ -1112,6 +1112,10 @@ input[type="radio"]:checked + label span {
         max-height: 70vh;
         @include tariff;
 
+        @include mobile {
+            margin-top: 10vh;
+        }
+
         .block {
             @include row();
 
